cd-8 panel and h4 jumping issue

--- a/_sass/_cd-8.scss
+++ b/_sass/_cd-8.scss
@@ -75,10 +75,11 @@
     padding-top: 0;
     padding-bottom: 0;
 
-
-    h4:first-child {
-      padding-top: 0;
-    }
+    /*
+        h4:first-child {
+          padding-top: 0;
+        }
+        */
   }
 
   .panel-default {
